# Korra

./: .gitmodules  Makefile  compile_flags.txt  main.c  test.py
.VSCodeCounter/2026-07-13_01-46-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-13_17-33-25/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
doc/: README.md  architecture.dot
docs/: README.md  architecture.dot  architecture_legend.dot  includes.dot
include/: color.h  color.hpp  math.h  status_error.hpp  video_encoder.hpp  video_socket.hpp
include/color_codec/: codec_json.hpp  color_codec.hpp  hsv_codec.hpp  palette_codec.hpp  rgb_palette_codec.hpp  ycbcr_palette_codec.hpp
include/config/: config_error.hpp
include/config/data/: encoder_config.hpp  pipes_config.hpp  root_config.hpp  video_config.hpp
include/config/parser/: encoder_parser.hpp  parser.hpp  pipes_parser.hpp  root_parser.hpp  video_parser.hpp
include/config/parser/encoder/: len_reader_parser.hpp  provider_parser.hpp
include/config/parser/encoder/provider/: provider_parser.hpp
include/config/parser/encoder/provider/basic_block/: basic_provider_parser.hpp
include/config/parser/encoder/provider/basic_block/color_codec/: color_codec_parser.hpp
include/config/parser/encoder/provider/basic_block/color_codec/rgb_palette/: rgb_palette_parser.hpp
include/config/parser/encoder/provider/len_reader/: len_reader_parser.hpp
include/config/parser/encoder/provider/len_reader/raw_ip/: raw_ip_length_reader_parser.hpp
include/config/parser/pipes/: video_pipe_in_parser.hpp  video_pipe_out_parser.hpp
include/config/parser/pipes/ffmpeg_rtmp/: ffmpeg_rtmp_pipe_in_parser.hpp  ffmpeg_rtmp_pipe_out_parser.hpp
include/encoder/: video_encoder.hpp
include/encoder/compressor/: compressor.hpp  none_compressor.hpp
include/encoder/corrector/: corrector.hpp  none_recoverer.hpp
include/encoder/obfuscator/: none_obfuscator.hpp  obfuscator.hpp
include/encoder/provider/: basic_block_config.h  basic_block_config.hpp  basic_block_container.hpp  basic_block_iterator.hpp  basic_block_ref.hpp  basic_provider.hpp  provider.hpp
include/encoder/provider/basic_block/: basic_block_container.hpp  basic_block_pointer.hpp  basic_block_pointer_proxy.hpp  bit_area.h  rect.h  rgb_index.h
include/encoder/provider/len_reader/: basic_length_reader.hpp  data_length_reader.hpp  raw_ip_length_reader.hpp
include/encoder/provider/video_pipe/: readonly_video_pipe.hpp  video_pipe.hpp  video_pipe_config.hpp  video_pipe_out.hpp  writeonly_video_pipe.hpp
include/encoder/provider/video_pipe/ffmpeg_rtmp/: ffmpeg_rtmp_config.hpp  ffmpeg_rtmp_pipe_in.hpp  ffmpeg_rtmp_pipe_out.hpp
include/encoder/provider/video_pipe/linux/tcp/: linux_tcp_multi_video_pipe.hpp  linux_tcp_readonly_video_pipe.hpp  linux_tcp_writeonly_video_pipe.hpp
include/encoder/recoverer/: none_recoverer.hpp  recoverer.hpp
include/video_pipe/: video_pipe_in.hpp
include/video_pipe/ffmpeg_rtmp/: ffmpeg_rtmp_pipe_in.hpp  ffmpeg_rtmp_pipe_out.hpp
src/: CMakeLists.txt  color.c  color.cpp  math.c  video_encoder.cpp
src/color_codec/: codec_json.cpp  color_codec.cpp  hsv_codec.cpp  palette_codec.cpp  rgb_palette_codec.cpp  ycbcr_palette_codec.cpp
src/config/parser/: video_parser.cpp
src/encoder/: video_encoder.cpp
src/encoder/provider/: basic_block_config.c  basic_block_config.cpp  basic_block_container.cpp  basic_block_ref.cpp  basic_provider.cpp  raw_ip_length_reader.cpp
src/encoder/provider/basic_block/: basic_block_container.cpp  basic_block_pointer.cpp  basic_block_pointer_proxy.cpp  rect.c  rgb_index.c
src/encoder/provider/len_reader/: raw_ip_length_reader.cpp
src/encoder/provider/len_readers/: raw_ip_length_reader.cpp
src/encoder/provider/video_pipe/: readonly_video_pipe.cpp  video_pipe.cpp  writeonly_video_pipe.cpp
src/encoder/provider/video_pipe/ffmpeg_rtmp/: ffmpeg_rtmp_pipe_in.cpp  ffmpeg_rtmp_pipe_out.cpp
src/encoder/provider/video_pipe/linux/tcp/: linux_tcp_readonly_video_pipe.cpp  linux_tcp_writeonly_video_pipe.cpp
src/video_pipe/ffmpeg_rtmp/: ffmpeg_rtmp_pipe_in.cpp  ffmpeg_rtmp_pipe_out.cpp
test/: CMakeLists.txt  color_test.c  color_test.cpp  color_test_helper.py  compile_flags.txt  math_test.cpp  test.c
test/context/data/color_codec/: rgb_palette0.json
test/context/expected/: frame_0.json  frame_1.json  frame_12.json  frame_15.json  frame_16.json  frame_17.json  frame_18.json  frame_3.json  frame_4.json  frame_8.json  frame_9.json
test/context/expected/frame/: frame_10.json  frame_11.json  frame_14.json  frame_2.json  frame_20.json  frame_21.json  frame_22.json  frame_23.json  frame_24.json  frame_25.json  frame_26.json  frame_27.json  frame_28.json  frame_29.json  frame_30.json  frame_5.json  frame_6.json  frame_7.json  lol.json
test/context/expected/frames/: frame_13.json  frame_19.json
test/context/expected/rgb_palettes/: palett0.json
test/encoder/provider/: basic_block_container_test.cpp  basic_block_test.cpp  raw_ip_length_reader_test.cpp
test/encoder/provider/basic_block/: basic_block_pointer_proxy_test.cpp
test/encoder/provider/len_reader/: raw_ip_length_reader_test.cpp
test/include/: frame_io.hpp  frame_meta.hpp  io.hpp
test/lib/: color_mutator.h  frame_io.cpp  test.c  test.h
test/src/: color_test.cpp
test/src/color_codec/: rgb_palette_codec_test.cpp
test/src/encoder/provider/: basic_block_test.cpp  len_reader_test.cpp
test/src/lib/: test.c
test/tool/: color_test_helper.py  fps_color.cpp  frame_generator.cpp  gen_frames.py  tgbi_helper.py
test/tool/analyse_decode/: database.py  metric.cpp
test/tool/analyse_decode/sql_scripts/: init.sql
test/tool/frame_gen/: argument_generator.cpp  frame_generator.cpp
test/tool/gen_frame/: argument_generator.cpp  frame_generator.cpp
tool/: cmake_init.py  fps_color.py  run.py  test.py
